--- a/login.html
+++ b/login.html
@@ -331,7 +331,7 @@
                 <button type="submit" class="login-btn">Login</button>
                 
                 <div class="login-footer">
-                    <p>Don't have an account? <a href="#">Sign up</a></p>
+                    <p>Don't have an account? <a href="signup.html">Sign up</a></p>
                     <p><a href="#">Forgot password?</a></p>
                 </div>
                 
